@@ -6,6 +6,7 @@ glibc (2.23-5) UNRELEASED; urgency=medium
     aliasing.
   * libc0.3.symbols.hurd-i386: Update symbols.
   * hurd-i386/tg-sysvshm.diff: Update from topgit.
+  * hurd-i386/cvs-check-local-headers.diff: Update from git.
 
  -- Samuel Thibault <sthibault@debian.org>  Tue, 09 Aug 2016 01:45:00 +0200
 
